# spatial-typestate

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: clippy.yml  codeql.yml  rustfmt.yml  sonarcloud.yml
docs/: SAFETY.md
src/: errors.rs  frame.rs  lib.rs  macros.rs  point.rs  quaternion.rs  transform.rs  units.rs  vector.rs
tests/: basic_usage.rs  fuzz_compat.rs  quantity_proptest.rs  quaternion_invariants.rs  quaternion_proptest.rs  transform_proptest.rs  transform_roundtrip.rs  type_safety_compile_fail.rs
tests/ui/: frame_mismatch.rs
